# graff

./: CMakeLists.txt  README.md  config_example.txt  config_gui  config_tui
src/: evaluate_rpn.c  evaluate_rpn.h  main.c  parser.c  parser.h  table.c  table.h  token.h
src/interface/: gui.c  interface.h  tui.c
